--- a/nginx/public/Purchased.html
+++ b/nginx/public/Purchased.html
@@ -20,9 +20,9 @@
 
       <h2 class="section-title">購入したもの</h2>
 
-    
+
       <div class="contact-form">
-        <p>ワイルドホーム フェレット(1台)</p>
+        <p>１１１１イルドホーム フェレット(1台)</p>
         <a href= "https://product.rakuten.co.jp/product/-/2af6bee3f2d273231a9066aca3a922cb/?scid=s_kwa_pla_pet&icm_acid=861-767-4285&icm_cid=178112367&icm_agid=16121449647&icm_kw=&icm_mt=&icm_tgid=aud-297601030793:pla-95389393047&gclid=Cj0KCQjwoaz3BRDnARIsAF1RfLdjHFpMDwO2S0n6i7d1Vcf7cL6n55NhHxfmq-U5pRzCGvxZp6iQdAkaAkg3EALw_wcB&gclsrc=aw.ds" ><img src="https://r.r10s.jp/ran/img/1001/0004/976/285/070/600/10010004976285070600_1.jpg"></a>
 
       </div>
