1日目感想追加

--- a/nginx/public/Growthdiary_1day.html
+++ b/nginx/public/Growthdiary_1day.html
@@ -63,6 +63,10 @@
         <img src="contents/S__3555345.jpg" width="50%" height="50%">
 
         <h2 class="section-title">1日目の感想</h2>
+        <p>
+          すごく痛い、顔はすごい可愛いんだけど、結構みために反して凶暴です。<br>
+          子供たちも結構怖がっていて明日はとりあえず軍手を用意しようと思います。
+        </p>
 
         <p></p>
 
