--- a/nginx/public/Growthdiary_1day.html
+++ b/nginx/public/Growthdiary_1day.html
@@ -67,6 +67,7 @@
           すごく痛い、顔はすごい可愛いんだけど、結構みために反して凶暴です。<br>
           子供たちも結構怖がっていて明日はとりあえず軍手を用意しようと思います。
         </p>
+        <img src="contents/img_5zMJ7jvXFs9Nm4TwfolF3roJhlSpgWyBPi5E.jpg">
 
         <p></p>
 
