8日目日記追加

--- a/nginx/public/Growthdiary.html
+++ b/nginx/public/Growthdiary.html
@@ -23,6 +23,7 @@
     
       <div class="contact-form">
          <a href= "Growthdiary_1day.html" ><h2>1日目</h2></a>
+         <a href= "Growthdiary_8day.html" ><h2>8日目</h2></a>
 
       </div>
     </div>
